perf/load/auto-mtls/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "svc-0.local"
  gateways:
  - svc-0-gateway
  http:
  - route:
    - destination:
        port:
          number: 8080
        host: "svc-0"
